In-Class Participation 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div id="main">
-    <!--介系备注-->
+    <!--介系备注 comment-->
     This is my personal website.介系我滴网站
     <button class="subpage">press me</button>
     <p>My self-introduction is one sentence. ↓me</p>
