--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<div id="main">
+<html>
+    <head>
+        <link href="style.css" rel="stylesheet"/>
+
+    </head>
+    <body>
+        <div id="main">
     <!--介系备注-->
     This is my personal website.介系我滴网站
     <button class="subpage">press me</button>
     <p>My self-introduction is one sentence. ↓me</p>
     <img src="me.jpg"/>
 </div>
+
+    </body>
+</html>
+
+
+
