In-Class Participation 1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <div id="main">
     <!--介系备注-->
     This is my personal website.介系我滴网站
-    <button class="subpage">press me</button>
-    <p>My self-introduction is one sentence. ↓me</p>
+    <button>press me</button>
+    <button class="subpage">about me</button>
+    <button class="subpage">contact me</button>
+    <p>My self-introduction is one sentence. ↓me facing any problems</p>
     <img src="me.jpg"/>
 </div>
 
