--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 </div>
 
     </body>
+    <div class="box">
+        <div>One</div>
+        <div>Two</div>
+        <div>Three
+            <br>first line
+            <br>second line
+        </div>
+    </div>
+
+    <div class="grid-container">
+        <div class="grid-item1">1</div>
+        <div class="grid-item2">2</div>
+        <div class="grid-item3">3</div>
+    </div>
 </html>
 
 
