In-Class Participation 3

--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
     </header>
 
     <section id="vis-scatterplot">
-        This is my section 
+        random data with real link 
+    </section>
+
+    <section id="vis-newplot">
+        real data! 
     </section>
 
     <script src="code.js"></script>
     <script src="src/scatterplot.js"></script>
+    <script src="src/newplot.js"></script>
 
    <!-- <div class="box">
         <div>One</div>
