In-Class Participation 4

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav id="nav">
                 <ul>
                     <h1>Peter HUANG Yifei</h1>
-                    <button id="press">Press Me</button>
+                    <a id="press" href="#vis-newplot">Press Me to Jump to the Bottom</a>
                     <button id="about">About Me</button>
                     <button id="contact">Contact Me</button>
                 </ul>
@@ -33,6 +33,7 @@
                         <h1>Welcome to my website</h1>
                         <p>I’m currently studying at the School of Creative Media, City University of Hong Kong, with a strong interest in photography, graphic communication, and data visualization. I’ve gained hands-on experience through internships in both the marketing and news industries, which have deepened my understanding of visual storytelling and audience engagement.</p>
                         <a class="intro_button" href="https://www.instagram.com/yatging_">Follow me on Instagram</a>
+                        <a class="intro_button" href="https://www.linkedin.com/in/yifei-huang-a8295a2ba?utm_">Follow me on LinkedIn</a>
                     </div>
                 </div>
 
