In-Class Participation 4

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav id="nav">
                 <ul>
                     <h1>Peter HUANG Yifei</h1>
-                    <a id="press" href="#vis-newplot">Press Me to Jump to the Bottom</a>
+                    <a id="press" href="#vis-fridayescape">Press to help me get home</a>
                     <a id="subpage" href="subpage/my_work.html">My Work</a>
                     <button id="contact">Contact Me</button>
                 </ul>
