--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>My Work</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
@@ -19,8 +19,8 @@
     </section>
 
     <script src="code.js"></script>
-    <script src="src/scatterplot.js"></script>
-    <script src="src/newplot.js"></script>
+    <script src="../src/scatterplot.js"></script> <!--../来选主文件夹下的文件-->
+    <script src="../src/newplot.js"></script>
 </body>
 
 </html>
