--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
                 <div id="main" class="text-container">
                     <div>
                         <h1>Welcome to my website</h1>
-                        <p>I’m currently studying at the School of Creative Media, City University of Hong Kong, with a strong interest in photography, graphic communication, and data visualization. I’ve gained hands-on experience through internships in both the marketing and news industries, which have deepened my understanding of visual storytelling and audience engagement.</p>
-                        <a class="intro_button instagram" href="https://www.instagram.com/yatging_">Follow me on Instagram</a>
-                        <a class="intro_button linkedin" href="https://www.linkedin.com/in/yifei-huang-a8295a2ba?utm_">Follow me on LinkedIn</a>
+                        <p>I’m currently studying at the School of Creative Media, City University of Hong Kong, with a
+                            strong interest in photography, graphic communication, and data visualization. I’ve gained
+                            hands-on experience through internships in both the marketing and news industries, which
+                            have deepened my understanding of visual storytelling and audience engagement.</p>
+                        <a class="intro_button instagram" href="https://www.instagram.com/yatging_">Follow me on
+                            Instagram</a>
+                        <a class="intro_button linkedin"
+                            href="https://www.linkedin.com/in/yifei-huang-a8295a2ba?utm_">Follow me on LinkedIn</a>
                     </div>
                 </div>
 
@@ -47,23 +52,31 @@
     </header>
 
     <section id="vis-scatterplot">
-        random data with real link 
+        random data with real link
     </section>
 
     <section id="vis-newplot">
-        real data! 
+        real data!
     </section>
 
     <section id="vis-radialtree">
-       <h2>About Me — Radial Tree Visualization</h2>
-       <div id="radialtree-legend" style="margin-top: 2em;"></div>
+        <h2>About Me — Radial Tree Visualization</h2>
+        <div id="radialtree-legend" style="margin-top: 2em;"></div>
     </section>
 
     <section id="vis-fridayescape">
-       <h2>My Friday Escape Routes to Guangzhou</h2>
-       </section>
-    
+        <h2>My Friday Escape Routes to Guangzhou</h2>
+    </section>
 
+    <section id="courses-network" style="padding: 60px 0; background-color: #f4f7fa;">
+        <div class="container" style="max-width: 900px; margin: auto; text-align: center;">
+            <h2 style="font-family: 'Georgia', serif; font-size: 32px; margin-bottom: 10px;">My Knowledge Network</h2>
+            <p style="font-size: 16px; color: #555;">
+                These are course I have taken in the university.
+            </p>
+            <div id="network-graph" style="margin-top: 40px;"></div>
+        </div>
+    </section>
 
 
     <script src="code.js"></script>
@@ -71,9 +84,11 @@
     <script src="src/newplot.js"></script>
     <script src="src/radialTree.js"></script>
     <script src="src/fridayEscapeTree.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="src/courses-network.js"></script>
 
 
-   <!-- <div class="box">
+    <!-- <div class="box">
         <div>One</div>
         <div>Two</div>
         <div>Three<br>first line<br>second line</div>
@@ -85,7 +100,7 @@
         <div class="grid-item3">3</div>
     </div>
 
-    放在最后，确保 DOM 元素已加载 --> 
+    放在最后，确保 DOM 元素已加载 -->
     <script src="code.js"></script>
 </body>
 
