In-Class Participation 5

--- a/index.html
+++ b/index.html
@@ -72,10 +72,14 @@
         <div class="container" style="max-width: 900px; margin: auto; text-align: center;">
             <h2 style="font-family: 'Georgia', serif; font-size: 32px; margin-bottom: 10px;">My Knowledge Network</h2>
             <p style="font-size: 16px; color: #555;">
-                These are course I have taken in the university.
+                These are courses I have taken in the university.
             </p>
             <div id="network-graph" style="margin-top: 40px;"></div>
         </div>
+    </section>
+
+    <section id="course-matrix">
+        <div id="adjacency-matrix"></div>
     </section>
 
 
@@ -86,6 +90,7 @@
     <script src="src/fridayEscapeTree.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="src/courses-network.js"></script>
+    <script src="src/adjacency-matrix.js"></script>
 
 
     <!-- <div class="box">
