--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
         <div id="adjacency-matrix"></div>
     </section>
 
+    <section id="vis-dotmap" style="padding: 60px 0; background-color: #f4f7fa;">
+  <div class="container" style="max-width: 900px; margin: auto; text-align: center;">
+    <h2>Places I Have Visited in China</h2>
+    <div id="dotmap-container" style="margin-top: 40px;"></div>
+  </div>
+</section>
+
+
+
 
     <script src="code.js"></script>
     <script src="src/scatterplot.js"></script>
@@ -91,6 +100,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="src/courses-network.js"></script>
     <script src="src/adjacency-matrix.js"></script>
+    <script src="src/dotmap.js"></script>
+
 
 
     <!-- <div class="box">
