In-Class Participation 6

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
   <div class="container" style="max-width: 900px; margin: auto; text-align: center;">
     <h2>Places I Have Visited in China</h2>
     <div id="dotmap-container" style="width: 100%; height: 600px;"></div>
-
   </div>
 </section>
 
+<section id="visitors">
+  <div id="visitor-dotmap" style="width:100%; height:600px;"></div>
+</section>
 
 
 
@@ -102,6 +104,8 @@
     <script src="src/courses-network.js"></script>
     <script src="src/adjacency-matrix.js"></script>
     <script src="src/dotmap.js"></script>
+    <script src="src/visitorDotmap.js"></script>
+    
 
 
 
