--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
     <div class="container" style="max-width: 900px; margin: auto; text-align: center;">
       <h2>Places I Have Visited in China</h2>
       <div id="dotmap-container" style="width: 100%; height: 800px;"></div>
-      改了8版代码都有bug被迫用回第一版
+      • Hold <b>Shift</b> and drag with the mouse to draw a rectangle and select cities.  
+  • Selected cities will appear in the right panel.  
+  • Click a city name in the panel to pan/zoom to that city.  
+  • Drag without Shift to pan the map, scroll to zoom.
+  不知道为什么地图就是右偏
     </div>
   </section>
 
